quicklog/tests/failures/struct_missing_serialize.stderr
error[E0277]: `SerializeStruct` doesn't implement `std::fmt::Debug`
  --> tests/failures/struct_missing_serialize.rs:12:5
   |
12 |     info!(?s1, "struct does not implement Debug");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SerializeStruct` cannot be formatted using `{:?}`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `SerializeStruct`
   = note: add `#[derive(Debug)]` to `SerializeStruct` or manually `impl std::fmt::Debug for SerializeStruct`
note: required by a bound in `debug_check`
  --> tests/failures/struct_missing_serialize.rs:12:5
   |
12 |     info!(?s1, "struct does not implement Debug");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `debug_check`
   = note: this error originates in the macro `info` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `SerializeStruct` with `#[derive(Debug)]`
  --> tests/failures/../common/mod.rs
   |
   + #[derive(Debug)]
   |

error[E0277]: `SerializeStruct` doesn't implement `std::fmt::Debug`
  --> tests/failures/struct_missing_serialize.rs:12:5
   |
12 |     info!(?s1, "struct does not implement Debug");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SerializeStruct` cannot be formatted using `{:?}`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `SerializeStruct`
   = note: add `#[derive(Debug)]` to `SerializeStruct` or manually `impl std::fmt::Debug for SerializeStruct`
   = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `info` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `SerializeStruct` with `#[derive(Debug)]`
  --> tests/failures/../common/mod.rs
   |
   + #[derive(Debug)]
   |
